aks_demo.application/kubernetes/aks_demo_app_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aks-demo-app-ingress
  namespace: primary
  labels:
    app: aks-demo-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - platformsvc.dev.hwapps.net
    - aks-ingress.dev.hwapps.net 
    secretName: ingress-tls-csi
  rules:
    - host: demo.test.com
      http:
        paths:
          - path: /
            backend:
              serviceName: aks-demo-app
              servicePort: 80
